force-app/main/default/objects/Connected_CRM__mdt/Connected_CRM__mdt.object-meta.xml
<CustomObject>
    <description>Contains 3rd Party details for CRMs connected within the Covetrus enterprise</description>
    <label>Connected CRM</label>
    <pluralLabel>Connected CRMs</pluralLabel>
</CustomObject>