force-app/main/default/objects/Connected_CRM__mdt/fields/Covetrus_Customer_Request_Path__c.field-meta.xml
<CustomField>
    <fullName>Covetrus_Customer_Request_Path__c</fullName>
    <description>Base Path for Covetrus Customer Requests</description>
    <inlineHelpText>Base Path for Covetrus Customer Requests</inlineHelpText>
    <label>Covetrus Customer Request Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>