force-app/main/default/objects/Connected_CRM__mdt/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>Query String for a GET Request - supports Tokens if implemented in APEX handler</description>
    <inlineHelpText>Query String for a GET Request - supports Tokens if implemented in APEX handler</inlineHelpText>
    <label>Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>