force-app/main/default/objects/Connected_CRM__mdt/fields/Server_Address__c.field-meta.xml
<CustomField>
    <fullName>Server_Address__c</fullName>
    <description>Server Address</description>
    <inlineHelpText>Server Address</inlineHelpText>
    <label>Server Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>